
syntax = "proto3";


package kstinter;

//
//进入.proto文件所在目录，执行该命令生成.pb.go文件
//protoc -I ./ ./kstinter.proto --go_out=plugins=grpc:./
//
service kstinter {
    //创建bucket
    rpc CreateBucket(req) returns(rsp){}

    //删除bucket
    rpc DelBucket(req) returns(rsp){}

    //插入键值对
    rpc InsertKey(req) returns(rsp){}

    //删除键
    rpc DelKey(req) returns(rsp){}

    //获取键
    rpc GetKey(req) returns(rsp){}

    //按前缀获取键值
    rpc GetKeyWithPrefix(req) returns(rsp){}

    //数据备份
    rpc BackUp(req) returns(stream frame){}

    //数据恢复
    rpc Restore(stream frame)returns(rsp){}
}

message req {
    string bucketName = 1;
    string key = 2;
    string value = 3;
    string prefix = 4;
    string dbname = 5;
}


message rsp {
    string value = 1;
    map<string, string> k_vs = 2;
}

message frame{
    bytes data = 1;
    int32 size = 2;
}